cluster/sandbox/mosquitto/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mosquitto
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mosquitto
  template:
    metadata:
      labels:
        app: mosquitto
    spec:
      affinity:
        nodeAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              preference:
                matchExpressions:
                  - key: kubernetes.io/hostname
                    operator: In
                    values:
                      - galapago
      imagePullSecrets:
        - name: harbor-registry
      containers:
      - name: mosquitto
        image: harbor.alix.lol/docker-hub/eclipse-mosquitto
        resources:
          requests:
            cpu: 10m
            memory: 16Mi
          limits:
            cpu: 50m
            memory: 64Mi
        ports:
        - containerPort: 8883
        - containerPort: 9001
        volumeMounts:
        - mountPath: /mosquitto/config/mosquitto.conf
          subPath: mosquitto.conf
          name: config
        # - mountPath: /etc/mosquitto/password_file
        #   name: passwords
        #   readOnly: true

      volumes:
      - name: config
        configMap:
          name: mosquitto-config
      # - name: passwords
      #   secret:
      #     secretName: mosquitto-passwords
      #     items:
      #       - key: passwords.txt
      #         path: password_file
