cluster/sandbox/mosquitto/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mosquitto
  annotations:
    kubernetes.io/ingress.class: "nginx"
    cert-manager.io/cluster-issuer: "letsencrypt"
spec:
  tls:
  - hosts:
    - mqtt.colfax.int
    secretName: mosquitto-tls
  rules:
  - host: mqtt.colfax.int
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mosquitto-mqtts
            port: 
              number: 8883
